@startuml
title DB_Client
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam nodesep 200
skinparam ranksep 80
skinparam entity {
  BackgroundColor #FAFAFA
  BorderColor     #555555
  FontSize        12
}
skinparam package {
  BackgroundColor #EEF4FF
  BorderColor     #3366CC
  FontSize        13
}
hide empty methods

package "DB_Client" as db_client #EEF4FF {

  entity "ClientUser" as client_user {
    * id              : BIGINT        <<PK>>
    --
    * full_name       : VARCHAR(100)
    * email           : VARCHAR(150)  <<UNIQUE>>
    * password_hash   : VARCHAR(255)
    * account_status  : ENUM('active','inactive','deleted')
    * created_at      : TIMESTAMP
    * updated_at      : TIMESTAMP
  }

  entity "ClientRecoveryToken" as client_rec_token {
    * id          : BIGINT      <<PK>>
    --
    * user_id     : BIGINT      <<FK → ClientUser>>
    * token_hash  : VARCHAR(255)
    * expires_at  : TIMESTAMP
    * used_at     : TIMESTAMP
    * created_at  : TIMESTAMP
  }

  entity "ClientNotification" as client_notif {
    * id              : BIGINT      <<PK>>
    --
    * client_user_id  : BIGINT      <<FK → ClientUser>>
    * type            : ENUM('internal','email','both')
    * title           : VARCHAR(200)
    * content         : TEXT
    * entity_type     : VARCHAR(50)
    * entity_id       : BIGINT
    * read            : BOOLEAN
    * sent_at         : TIMESTAMP
    * send_attempts   : TINYINT
    * created_at      : TIMESTAMP
  }

  entity "Cart" as cart {
    * id              : BIGINT <<PK>>
    --
    * client_user_id  : BIGINT <<FK → ClientUser>>
    * status          : ENUM('active','abandoned','converted')
    * created_at      : TIMESTAMP
    * updated_at      : TIMESTAMP
  }

  entity "Favorite" as favorite {
    * id              : BIGINT <<PK>>
    --
    * client_user_id  : BIGINT <<FK → ClientUser>>
    * product_id      : BIGINT <<FK → Product>>
    * created_at      : TIMESTAMP
  }

  entity "CartItem" as cart_item {
    * id               : BIGINT       <<PK>>
    --
    * cart_id          : BIGINT       <<FK → Cart>>
    * variant_id       : BIGINT       <<FK → ProductVariant>>
    * quantity         : INT
    * unit_price_snap  : DECIMAL(10,2)
    * created_at       : TIMESTAMP
  }

  entity "Order" as order_e {
    * id               : BIGINT       <<PK>>
    --
    * client_user_id   : BIGINT       <<FK → ClientUser>>
    * cart_id          : BIGINT       <<FK → Cart>>
    * status           : ENUM('pending_payment','confirmed',\n'in_preparation','ready_shipment',\n'shipped','in_transit','delivered','cancelled')
    * subtotal         : DECIMAL(10,2)
    * taxes            : DECIMAL(10,2)
    * total_amount     : DECIMAL(10,2)
    * shipping_address : VARCHAR(300)
    * created_at       : TIMESTAMP
    * updated_at       : TIMESTAMP
  }

  entity "OrderItem" as order_item {
    * id               : BIGINT       <<PK>>
    --
    * order_id         : BIGINT       <<FK → Order>>
    * variant_id       : BIGINT       <<FK → ProductVariant>>
    * quantity         : INT
    * unit_price_snap  : DECIMAL(10,2)
    * created_at       : TIMESTAMP
  }

  entity "Payment" as payment {
    * id                 : BIGINT      <<PK>>
    --
    * order_id           : BIGINT      <<FK → Order>>
    * method             : ENUM('SINPE','cash','card','other')
    * external_reference : VARCHAR(100)
    * amount             : DECIMAL(10,2)
    * status             : ENUM('pending','approved','rejected','voided')
    * created_at         : TIMESTAMP
    * updated_at         : TIMESTAMP
  }

  entity "Category" as category {
    * id     : BIGINT      <<PK>>
    --
    * name   : VARCHAR(80) <<UNIQUE>>
  }

  entity "Item" as item_c {
    * id         : BIGINT     <<PK>>
    --
    * name       : VARCHAR(100)
    * item_type  : ENUM('product')
    * status     : ENUM('active','inactive')
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
  }

  entity "Product" as product {
    * item_id      : BIGINT <<PK, FK → Item>>
    --
    * category_id  : BIGINT <<FK → Category>>
    * description  : TEXT
    * image_url    : VARCHAR(300)
    * type         : ENUM('standard','custom')
  }

  entity "ProductVariant" as variant {
    * id              : BIGINT     <<PK>>
    --
    * product_id      : BIGINT     <<FK → Product>>
    * color           : VARCHAR(50)
    * size            : VARCHAR(30)
    * price           : DECIMAL(10,2)
    * current_stock   : INT
    * min_threshold   : INT
    * reserved_stock  : INT
  }

  entity "RatingsSummary" as ratings_summary {
    * id             : BIGINT       <<PK>>
    --
    * product_id     : BIGINT       <<FK, UNIQUE → Product>>
    * average        : DECIMAL(3,1)
    * total_reviews  : INT
    * stars_1        : INT
    * stars_2        : INT
    * stars_3        : INT
    * stars_4        : INT
    * stars_5        : INT
  }

  entity "Review" as review {
    * id               : BIGINT  <<PK>>
    --
    * product_id       : BIGINT  <<FK → Product>>
    * client_user_id   : BIGINT  <<FK → ClientUser>>
    * rating           : TINYINT
    * comment          : TEXT
    * status           : ENUM('pending','approved','rejected')
    * edited           : BOOLEAN
    * helpful_votes    : INT
    * unhelpful_votes  : INT
    * created_at       : TIMESTAMP
    * updated_at       : TIMESTAMP
  }

  entity "ReviewVote" as review_vote {
    * id              : BIGINT <<PK>>
    --
    * review_id       : BIGINT <<FK → Review>>
    * client_user_id  : BIGINT <<FK → ClientUser>>
    * vote_type       : ENUM('helpful','unhelpful')
    * created_at      : TIMESTAMP
  }

  client_user    ||--o{ client_rec_token
  client_user    ||--o{ client_notif
  client_user    ||--o{ cart
  client_user    ||--o{ favorite
  client_user    ||--o{ order_e
  client_user    ||--o{ review
  client_user    ||--o{ review_vote
  cart           ||--o{ cart_item
  cart           ||--o| order_e
  order_e        ||--o{ order_item
  order_e        ||--o{ payment
  item_c         <|-- product
  product        }o--|| category
  product        ||--o{ variant
  product        ||--o{ review
  product        ||--|{ ratings_summary
  product        ||--o{ favorite
  variant        ||--o{ cart_item
  variant        ||--o{ order_item
  review         ||--o{ review_vote
}
@enduml